--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,41 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        android:id="@+id/text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/text1"
+        android:layout_width="@dimen/row_width_60"
+        android:layout_height="@dimen/row_width_60"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/round_corner"
+        android:padding="@dimen/padding_5"
+        android:src="@mipmap/ic_launcher"
+        android:text="Hello World!"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/text2"
+        android:layout_width="@dimen/row_width_60"
+        android:layout_height="@dimen/row_width_60"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/round_corner"
+        android:padding="@dimen/padding_5"
+        android:src="@mipmap/ic_launcher"
+        android:text="Hello World!"
+        app:layout_constraintEnd_toStartOf="@+id/text1"
+        app:layout_constraintHorizontal_bias="0.86"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
