--- a/app/src/main/res/layout/header_login.xml
+++ b/app/src/main/res/layout/header_login.xml
@@ -50,7 +50,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="fitXY"
-                    android:src="@drawable/smart_app_gif_icon" />
+                    android:src="@drawable/unnamed" />
             </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
