--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.welcome.fragment.Home">
+    android:orientation="vertical"
+    tools:context=".view.welcome.Welcome">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <include layout="@layout/header_welcome" />
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginTop="@dimen/header_content_minus_margin_top_base"
+        android:layout_weight=".1"
+        android:background="@drawable/welcome_background_image"
+        android:orientation="vertical">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_15"
+            android:layout_marginBottom="@dimen/bottom_nav_height_base"
+            android:orientation="vertical">
+
+            <GridView
+                android:id="@+id/menuGridView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/margin_15"
+                android:layout_marginRight="@dimen/margin_15"
+                android:horizontalSpacing="@dimen/welcome_gridview_hs_base"
+                android:numColumns="3"
+                android:padding="@dimen/welcome_gridview_padding_base"
+                android:scrollbars="none"
+                android:verticalSpacing="@dimen/welcome_gridview_vs_base" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
