--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,16 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/home3">
+    app:startDestination="@+id/navigation_home">
 
     <fragment
-        android:id="@+id/home3"
+        android:id="@+id/navigation_home"
         android:name="com.emon.raihan.messmanagement.view.welcome.fragment.Home"
-        android:label="fragment_home"
+        android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
     <fragment
-        android:id="@+id/notification2"
+        android:id="@+id/navigation_notifications"
         android:name="com.emon.raihan.messmanagement.view.welcome.fragment.Notification"
-        android:label="fragment_notification"
+        android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notification" />
+
+    <fragment
+        android:id="@+id/navigation_account"
+        android:name="com.emon.raihan.messmanagement.view.welcome.fragment.MealHistory"
+        android:label="@string/title_account"
+        tools:layout="@layout/fragment_meal_history" />
+
+    <fragment
+        android:id="@+id/navigation_settings"
+        android:name="com.emon.raihan.messmanagement.view.welcome.fragment.Developer"
+        android:label="@string/title_setting"
+        tools:layout="@layout/fragment_developer" />
+
+
 </navigation>
